# steampunk-game-old

./: .eslintrc.json  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  package-lock.json  package.json  steampunk-game.sln  tsconfig.json  webpack.config.js
.github/workflows/: lint.yml
app/: bun.lockb  electron-builder.json  electron-init.js  package-lock.json  package.json  tauri.conf.json  tsconfig.json
app/icons/: icon.icns
app/src/: Application.ts  index.ts  main.rs
app/src-tauri/: tauri.conf.json
assets/pixelorama/: default.pxo
game/: package-lock.json  package.json  tsconfig.json  webpack.config.js
game/src/: index.html  index.ts
game/src/logic/graphics/: Scene.ts
game/src/logic/graphics/objects/: RenderObject.ts
game/src/shaders/: solid.glsl
game/src/styles/: index.scss
src/: index.html  index.ts  main.cpp
src/assets/: content_provider.cpp  content_provider.hpp  font_init.hpp
src/game/: event.cpp  event.hpp  event_pump.hpp  object.cpp  object.hpp  property.hpp  state.cpp  state.hpp  world.cpp  world.hpp  write_job.cpp  write_job.hpp
src/game/reflection/: object._hpp  property._hpp  test_type._hpp  write_job_backup._cpp  write_job_backup._hpp
src/helpers/: promises.ts
src/logging/: logger.cpp  logger.hpp  macros.hpp
src/logic/: entity.ts  scheduler.ts  service.ts
src/logic/engine/: engine.ts  engineState.ts  index.ts
src/logic/graphics/: Camera.ts  RenderContext.ts  Renderer.ts  Scene.ts  Shader.ts  index.ts
src/logic/graphics/objects/: Rectangle.ts  RenderObject.ts
src/logic/scheduler/: Job.ts  Scheduler.ts  index.ts
src/platform/: current.hpp  linux.cpp  linux.hpp  windows.cpp  windows.hpp
src/rendering/: render_job.cpp  render_job.hpp  renderable.cpp  renderable.hpp
src/rendering/renderables/: rect.hpp  text_box.cpp  text_box.hpp
src/sched/: job.cpp  job.hpp  runner.cpp  runner.hpp  worker.cpp  worker.hpp
src/services/graphics/: index.ts  scene.ts  shaderType.ts
src/services/graphics/objects/: rectangle.ts  renderObject.ts
src/shaders/: light.glsl  vertex.glsl
src/styles/: index.scss
src/util/: debug.hpp  logger.cpp  logger.hpp  sdl_destroyer.hpp  uri_tools.cpp  uri_tools.hpp
static/shaders/: fragment.glsl  light.glsl  solid.glsl  vertex.glsl
